removing addition CV lines and fixing book cover spacing

--- a/css/style.css
+++ b/css/style.css
@@ -679,10 +679,7 @@ td.date {
 	width: 330px;
 	height: 296px;
 	margin: auto;
-	margin-top: 0;
-	margin-bottom: 0;
 	border: 1px solid black;
-	padding: auto;
 	overflow-y: scroll;
 	display: block;
 	background: lightgray;
@@ -695,10 +692,10 @@ td.date {
 
 #book-list {
 	list-style-type: none;
-	width: 40%;
-    text-align: center;
-    padding: 10%;
-    padding-top: 0;
+	width: 300px;
+	text-align: center;
+	padding: auto;
+	margin-top: 10px;
 }
 
 #semiotics-content {
